app/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    MINUS
    PATTERN
    PERCENT
    PLUS

Grammar

Rule 0     S' -> start
Rule 1     start -> select
Rule 2     start -> insert
Rule 3     start -> update
Rule 4     start -> delete
Rule 5     empty -> <empty>
Rule 6     select -> SELECT distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
Rule 7     insert -> INSERT INTO DATASOURCE icolumn VALUES insert_values SIMICOLON
Rule 8     update -> UPDATE DATASOURCE SET assigns where SIMICOLON
Rule 9     delete -> DELETE FROM DATASOURCE where
Rule 10    logical -> EQUAL
Rule 11    logical -> NOTEQUAL
Rule 12    logical -> BIGGER_EQUAL
Rule 13    logical -> BIGGER
Rule 14    logical -> SMALLER_EQUAL
Rule 15    logical -> SMALLER
Rule 16    where -> WHERE conditions
Rule 17    where -> empty
Rule 18    conditions -> LPAREN conditions RPAREN
Rule 19    conditions -> conditions AND conditions
Rule 20    conditions -> conditions OR conditions
Rule 21    conditions -> exp LIKE STRING
Rule 22    conditions -> exp logical exp
Rule 23    conditions -> NOT conditions
Rule 24    exp -> STRING
Rule 25    exp -> COLNAME
Rule 26    exp -> NUMBER
Rule 27    NUMBER -> NEGATIVE_INTNUMBER
Rule 28    NUMBER -> POSITIVE_INTNUMBER
Rule 29    NUMBER -> FLOATNUMBER
Rule 30    distinct -> DISTINCT
Rule 31    distinct -> empty
Rule 32    column -> COLNUMBER
Rule 33    column -> COLNAME
Rule 34    columns -> columns COMMA columns
Rule 35    columns -> column
Rule 36    select_columns -> TIMES
Rule 37    select_columns -> columns
Rule 38    into -> INTO DATASOURCE
Rule 39    into -> empty
Rule 40    order -> ORDER BY column way
Rule 41    order -> empty
Rule 42    way -> ASC
Rule 43    way -> empty
Rule 44    way -> DESC
Rule 45    limit -> LIMIT POSITIVE_INTNUMBER
Rule 46    limit -> empty
Rule 47    value -> STRING
Rule 48    value -> NUMBER
Rule 49    values -> values COMMA values
Rule 50    values -> value
Rule 51    single_values -> LPAREN values RPAREN
Rule 52    insert_values -> insert_values COMMA insert_values
Rule 53    insert_values -> single_values
Rule 54    icolumn -> LPAREN columns RPAREN
Rule 55    icolumn -> empty
Rule 56    assign -> column EQUAL value
Rule 57    assigns -> assign COMMA assigns
Rule 58    assigns -> assign

Terminals, with rules where they appear

AND                  : 19
ASC                  : 42
BIGGER               : 13
BIGGER_EQUAL         : 12
BY                   : 40
COLNAME              : 25 33
COLNUMBER            : 32
COMMA                : 34 49 52 57
DATASOURCE           : 6 7 8 9 38
DELETE               : 9
DESC                 : 44
DISTINCT             : 30
DIVIDE               : 
EQUAL                : 10 56
FLOATNUMBER          : 29
FROM                 : 6 9
INSERT               : 7
INTO                 : 7 38
LIKE                 : 21
LIMIT                : 45
LPAREN               : 18 51 54
MINUS                : 
NEGATIVE_INTNUMBER   : 27
NOT                  : 23
NOTEQUAL             : 11
OR                   : 20
ORDER                : 40
PATTERN              : 
PERCENT              : 
PLUS                 : 
POSITIVE_INTNUMBER   : 28 45
RPAREN               : 18 51 54
SELECT               : 6
SET                  : 8
SIMICOLON            : 6 7 8
SMALLER              : 15
SMALLER_EQUAL        : 14
STRING               : 21 24 47
TIMES                : 36
UPDATE               : 8
VALUES               : 7
WHERE                : 16
error                : 

Nonterminals, with rules where they appear

NUMBER               : 26 48
assign               : 57 58
assigns              : 8 57
column               : 35 40 56
columns              : 34 34 37 54
conditions           : 16 18 19 19 20 20 23
delete               : 4
distinct             : 6
empty                : 17 31 39 41 43 46 55
exp                  : 21 22 22
icolumn              : 7
insert               : 2
insert_values        : 7 52 52
into                 : 6
limit                : 6
logical              : 22
order                : 6
select               : 1
select_columns       : 6
single_values        : 53
start                : 0
update               : 3
value                : 50 56
values               : 49 49 51
way                  : 40
where                : 6 8 9

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . select
    (2) start -> . insert
    (3) start -> . update
    (4) start -> . delete
    (6) select -> . SELECT distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
    (7) insert -> . INSERT INTO DATASOURCE icolumn VALUES insert_values SIMICOLON
    (8) update -> . UPDATE DATASOURCE SET assigns where SIMICOLON
    (9) delete -> . DELETE FROM DATASOURCE where

    SELECT          shift and go to state 6
    INSERT          shift and go to state 7
    UPDATE          shift and go to state 8
    DELETE          shift and go to state 9

    start                          shift and go to state 1
    select                         shift and go to state 2
    insert                         shift and go to state 3
    update                         shift and go to state 4
    delete                         shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> select .

    $end            reduce using rule 1 (start -> select .)


state 3

    (2) start -> insert .

    $end            reduce using rule 2 (start -> insert .)


state 4

    (3) start -> update .

    $end            reduce using rule 3 (start -> update .)


state 5

    (4) start -> delete .

    $end            reduce using rule 4 (start -> delete .)


state 6

    (6) select -> SELECT . distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
    (30) distinct -> . DISTINCT
    (31) distinct -> . empty
    (5) empty -> .

    DISTINCT        shift and go to state 11
    TIMES           reduce using rule 5 (empty -> .)
    COLNUMBER       reduce using rule 5 (empty -> .)
    COLNAME         reduce using rule 5 (empty -> .)

    distinct                       shift and go to state 10
    empty                          shift and go to state 12

state 7

    (7) insert -> INSERT . INTO DATASOURCE icolumn VALUES insert_values SIMICOLON

    INTO            shift and go to state 13


state 8

    (8) update -> UPDATE . DATASOURCE SET assigns where SIMICOLON

    DATASOURCE      shift and go to state 14


state 9

    (9) delete -> DELETE . FROM DATASOURCE where

    FROM            shift and go to state 15


state 10

    (6) select -> SELECT distinct . select_columns FROM DATASOURCE into where order limit SIMICOLON
    (36) select_columns -> . TIMES
    (37) select_columns -> . columns
    (34) columns -> . columns COMMA columns
    (35) columns -> . column
    (32) column -> . COLNUMBER
    (33) column -> . COLNAME

    TIMES           shift and go to state 17
    COLNUMBER       shift and go to state 20
    COLNAME         shift and go to state 21

    select_columns                 shift and go to state 16
    columns                        shift and go to state 18
    column                         shift and go to state 19

state 11

    (30) distinct -> DISTINCT .

    TIMES           reduce using rule 30 (distinct -> DISTINCT .)
    COLNUMBER       reduce using rule 30 (distinct -> DISTINCT .)
    COLNAME         reduce using rule 30 (distinct -> DISTINCT .)


state 12

    (31) distinct -> empty .

    TIMES           reduce using rule 31 (distinct -> empty .)
    COLNUMBER       reduce using rule 31 (distinct -> empty .)
    COLNAME         reduce using rule 31 (distinct -> empty .)


state 13

    (7) insert -> INSERT INTO . DATASOURCE icolumn VALUES insert_values SIMICOLON

    DATASOURCE      shift and go to state 22


state 14

    (8) update -> UPDATE DATASOURCE . SET assigns where SIMICOLON

    SET             shift and go to state 23


state 15

    (9) delete -> DELETE FROM . DATASOURCE where

    DATASOURCE      shift and go to state 24


state 16

    (6) select -> SELECT distinct select_columns . FROM DATASOURCE into where order limit SIMICOLON

    FROM            shift and go to state 25


state 17

    (36) select_columns -> TIMES .

    FROM            reduce using rule 36 (select_columns -> TIMES .)


state 18

    (37) select_columns -> columns .
    (34) columns -> columns . COMMA columns

    FROM            reduce using rule 37 (select_columns -> columns .)
    COMMA           shift and go to state 26


state 19

    (35) columns -> column .

    COMMA           reduce using rule 35 (columns -> column .)
    FROM            reduce using rule 35 (columns -> column .)
    RPAREN          reduce using rule 35 (columns -> column .)


state 20

    (32) column -> COLNUMBER .

    COMMA           reduce using rule 32 (column -> COLNUMBER .)
    FROM            reduce using rule 32 (column -> COLNUMBER .)
    EQUAL           reduce using rule 32 (column -> COLNUMBER .)
    RPAREN          reduce using rule 32 (column -> COLNUMBER .)
    ASC             reduce using rule 32 (column -> COLNUMBER .)
    DESC            reduce using rule 32 (column -> COLNUMBER .)
    LIMIT           reduce using rule 32 (column -> COLNUMBER .)
    SIMICOLON       reduce using rule 32 (column -> COLNUMBER .)


state 21

    (33) column -> COLNAME .

    COMMA           reduce using rule 33 (column -> COLNAME .)
    FROM            reduce using rule 33 (column -> COLNAME .)
    EQUAL           reduce using rule 33 (column -> COLNAME .)
    RPAREN          reduce using rule 33 (column -> COLNAME .)
    ASC             reduce using rule 33 (column -> COLNAME .)
    DESC            reduce using rule 33 (column -> COLNAME .)
    LIMIT           reduce using rule 33 (column -> COLNAME .)
    SIMICOLON       reduce using rule 33 (column -> COLNAME .)


state 22

    (7) insert -> INSERT INTO DATASOURCE . icolumn VALUES insert_values SIMICOLON
    (54) icolumn -> . LPAREN columns RPAREN
    (55) icolumn -> . empty
    (5) empty -> .

    LPAREN          shift and go to state 28
    VALUES          reduce using rule 5 (empty -> .)

    icolumn                        shift and go to state 27
    empty                          shift and go to state 29

state 23

    (8) update -> UPDATE DATASOURCE SET . assigns where SIMICOLON
    (57) assigns -> . assign COMMA assigns
    (58) assigns -> . assign
    (56) assign -> . column EQUAL value
    (32) column -> . COLNUMBER
    (33) column -> . COLNAME

    COLNUMBER       shift and go to state 20
    COLNAME         shift and go to state 21

    assigns                        shift and go to state 30
    assign                         shift and go to state 31
    column                         shift and go to state 32

state 24

    (9) delete -> DELETE FROM DATASOURCE . where
    (16) where -> . WHERE conditions
    (17) where -> . empty
    (5) empty -> .

    WHERE           shift and go to state 34
    $end            reduce using rule 5 (empty -> .)

    where                          shift and go to state 33
    empty                          shift and go to state 35

state 25

    (6) select -> SELECT distinct select_columns FROM . DATASOURCE into where order limit SIMICOLON

    DATASOURCE      shift and go to state 36


state 26

    (34) columns -> columns COMMA . columns
    (34) columns -> . columns COMMA columns
    (35) columns -> . column
    (32) column -> . COLNUMBER
    (33) column -> . COLNAME

    COLNUMBER       shift and go to state 20
    COLNAME         shift and go to state 21

    columns                        shift and go to state 37
    column                         shift and go to state 19

state 27

    (7) insert -> INSERT INTO DATASOURCE icolumn . VALUES insert_values SIMICOLON

    VALUES          shift and go to state 38


state 28

    (54) icolumn -> LPAREN . columns RPAREN
    (34) columns -> . columns COMMA columns
    (35) columns -> . column
    (32) column -> . COLNUMBER
    (33) column -> . COLNAME

    COLNUMBER       shift and go to state 20
    COLNAME         shift and go to state 21

    columns                        shift and go to state 39
    column                         shift and go to state 19

state 29

    (55) icolumn -> empty .

    VALUES          reduce using rule 55 (icolumn -> empty .)


state 30

    (8) update -> UPDATE DATASOURCE SET assigns . where SIMICOLON
    (16) where -> . WHERE conditions
    (17) where -> . empty
    (5) empty -> .

    WHERE           shift and go to state 34
    SIMICOLON       reduce using rule 5 (empty -> .)

    where                          shift and go to state 40
    empty                          shift and go to state 35

state 31

    (57) assigns -> assign . COMMA assigns
    (58) assigns -> assign .

    COMMA           shift and go to state 41
    WHERE           reduce using rule 58 (assigns -> assign .)
    SIMICOLON       reduce using rule 58 (assigns -> assign .)


state 32

    (56) assign -> column . EQUAL value

    EQUAL           shift and go to state 42


state 33

    (9) delete -> DELETE FROM DATASOURCE where .

    $end            reduce using rule 9 (delete -> DELETE FROM DATASOURCE where .)


state 34

    (16) where -> WHERE . conditions
    (18) conditions -> . LPAREN conditions RPAREN
    (19) conditions -> . conditions AND conditions
    (20) conditions -> . conditions OR conditions
    (21) conditions -> . exp LIKE STRING
    (22) conditions -> . exp logical exp
    (23) conditions -> . NOT conditions
    (24) exp -> . STRING
    (25) exp -> . COLNAME
    (26) exp -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    LPAREN          shift and go to state 44
    NOT             shift and go to state 47
    STRING          shift and go to state 46
    COLNAME         shift and go to state 48
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    conditions                     shift and go to state 43
    exp                            shift and go to state 45
    NUMBER                         shift and go to state 49

state 35

    (17) where -> empty .

    $end            reduce using rule 17 (where -> empty .)
    SIMICOLON       reduce using rule 17 (where -> empty .)
    ORDER           reduce using rule 17 (where -> empty .)
    LIMIT           reduce using rule 17 (where -> empty .)


state 36

    (6) select -> SELECT distinct select_columns FROM DATASOURCE . into where order limit SIMICOLON
    (38) into -> . INTO DATASOURCE
    (39) into -> . empty
    (5) empty -> .

    INTO            shift and go to state 54
    WHERE           reduce using rule 5 (empty -> .)
    ORDER           reduce using rule 5 (empty -> .)
    LIMIT           reduce using rule 5 (empty -> .)
    SIMICOLON       reduce using rule 5 (empty -> .)

    into                           shift and go to state 53
    empty                          shift and go to state 55

state 37

    (34) columns -> columns COMMA columns .
    (34) columns -> columns . COMMA columns

  ! shift/reduce conflict for COMMA resolved as shift
    FROM            reduce using rule 34 (columns -> columns COMMA columns .)
    RPAREN          reduce using rule 34 (columns -> columns COMMA columns .)
    COMMA           shift and go to state 26

  ! COMMA           [ reduce using rule 34 (columns -> columns COMMA columns .) ]


state 38

    (7) insert -> INSERT INTO DATASOURCE icolumn VALUES . insert_values SIMICOLON
    (52) insert_values -> . insert_values COMMA insert_values
    (53) insert_values -> . single_values
    (51) single_values -> . LPAREN values RPAREN

    LPAREN          shift and go to state 58

    insert_values                  shift and go to state 56
    single_values                  shift and go to state 57

state 39

    (54) icolumn -> LPAREN columns . RPAREN
    (34) columns -> columns . COMMA columns

    RPAREN          shift and go to state 59
    COMMA           shift and go to state 26


state 40

    (8) update -> UPDATE DATASOURCE SET assigns where . SIMICOLON

    SIMICOLON       shift and go to state 60


state 41

    (57) assigns -> assign COMMA . assigns
    (57) assigns -> . assign COMMA assigns
    (58) assigns -> . assign
    (56) assign -> . column EQUAL value
    (32) column -> . COLNUMBER
    (33) column -> . COLNAME

    COLNUMBER       shift and go to state 20
    COLNAME         shift and go to state 21

    assign                         shift and go to state 31
    assigns                        shift and go to state 61
    column                         shift and go to state 32

state 42

    (56) assign -> column EQUAL . value
    (47) value -> . STRING
    (48) value -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    STRING          shift and go to state 63
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    value                          shift and go to state 62
    NUMBER                         shift and go to state 64

state 43

    (16) where -> WHERE conditions .
    (19) conditions -> conditions . AND conditions
    (20) conditions -> conditions . OR conditions

    $end            reduce using rule 16 (where -> WHERE conditions .)
    SIMICOLON       reduce using rule 16 (where -> WHERE conditions .)
    ORDER           reduce using rule 16 (where -> WHERE conditions .)
    LIMIT           reduce using rule 16 (where -> WHERE conditions .)
    AND             shift and go to state 65
    OR              shift and go to state 66


state 44

    (18) conditions -> LPAREN . conditions RPAREN
    (18) conditions -> . LPAREN conditions RPAREN
    (19) conditions -> . conditions AND conditions
    (20) conditions -> . conditions OR conditions
    (21) conditions -> . exp LIKE STRING
    (22) conditions -> . exp logical exp
    (23) conditions -> . NOT conditions
    (24) exp -> . STRING
    (25) exp -> . COLNAME
    (26) exp -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    LPAREN          shift and go to state 44
    NOT             shift and go to state 47
    STRING          shift and go to state 46
    COLNAME         shift and go to state 48
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    conditions                     shift and go to state 67
    exp                            shift and go to state 45
    NUMBER                         shift and go to state 49

state 45

    (21) conditions -> exp . LIKE STRING
    (22) conditions -> exp . logical exp
    (10) logical -> . EQUAL
    (11) logical -> . NOTEQUAL
    (12) logical -> . BIGGER_EQUAL
    (13) logical -> . BIGGER
    (14) logical -> . SMALLER_EQUAL
    (15) logical -> . SMALLER

    LIKE            shift and go to state 68
    EQUAL           shift and go to state 70
    NOTEQUAL        shift and go to state 71
    BIGGER_EQUAL    shift and go to state 72
    BIGGER          shift and go to state 73
    SMALLER_EQUAL   shift and go to state 74
    SMALLER         shift and go to state 75

    logical                        shift and go to state 69

state 46

    (24) exp -> STRING .

    LIKE            reduce using rule 24 (exp -> STRING .)
    EQUAL           reduce using rule 24 (exp -> STRING .)
    NOTEQUAL        reduce using rule 24 (exp -> STRING .)
    BIGGER_EQUAL    reduce using rule 24 (exp -> STRING .)
    BIGGER          reduce using rule 24 (exp -> STRING .)
    SMALLER_EQUAL   reduce using rule 24 (exp -> STRING .)
    SMALLER         reduce using rule 24 (exp -> STRING .)
    AND             reduce using rule 24 (exp -> STRING .)
    OR              reduce using rule 24 (exp -> STRING .)
    $end            reduce using rule 24 (exp -> STRING .)
    SIMICOLON       reduce using rule 24 (exp -> STRING .)
    ORDER           reduce using rule 24 (exp -> STRING .)
    LIMIT           reduce using rule 24 (exp -> STRING .)
    RPAREN          reduce using rule 24 (exp -> STRING .)


state 47

    (23) conditions -> NOT . conditions
    (18) conditions -> . LPAREN conditions RPAREN
    (19) conditions -> . conditions AND conditions
    (20) conditions -> . conditions OR conditions
    (21) conditions -> . exp LIKE STRING
    (22) conditions -> . exp logical exp
    (23) conditions -> . NOT conditions
    (24) exp -> . STRING
    (25) exp -> . COLNAME
    (26) exp -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    LPAREN          shift and go to state 44
    NOT             shift and go to state 47
    STRING          shift and go to state 46
    COLNAME         shift and go to state 48
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    conditions                     shift and go to state 76
    exp                            shift and go to state 45
    NUMBER                         shift and go to state 49

state 48

    (25) exp -> COLNAME .

    LIKE            reduce using rule 25 (exp -> COLNAME .)
    EQUAL           reduce using rule 25 (exp -> COLNAME .)
    NOTEQUAL        reduce using rule 25 (exp -> COLNAME .)
    BIGGER_EQUAL    reduce using rule 25 (exp -> COLNAME .)
    BIGGER          reduce using rule 25 (exp -> COLNAME .)
    SMALLER_EQUAL   reduce using rule 25 (exp -> COLNAME .)
    SMALLER         reduce using rule 25 (exp -> COLNAME .)
    AND             reduce using rule 25 (exp -> COLNAME .)
    OR              reduce using rule 25 (exp -> COLNAME .)
    $end            reduce using rule 25 (exp -> COLNAME .)
    SIMICOLON       reduce using rule 25 (exp -> COLNAME .)
    ORDER           reduce using rule 25 (exp -> COLNAME .)
    LIMIT           reduce using rule 25 (exp -> COLNAME .)
    RPAREN          reduce using rule 25 (exp -> COLNAME .)


state 49

    (26) exp -> NUMBER .

    LIKE            reduce using rule 26 (exp -> NUMBER .)
    EQUAL           reduce using rule 26 (exp -> NUMBER .)
    NOTEQUAL        reduce using rule 26 (exp -> NUMBER .)
    BIGGER_EQUAL    reduce using rule 26 (exp -> NUMBER .)
    BIGGER          reduce using rule 26 (exp -> NUMBER .)
    SMALLER_EQUAL   reduce using rule 26 (exp -> NUMBER .)
    SMALLER         reduce using rule 26 (exp -> NUMBER .)
    AND             reduce using rule 26 (exp -> NUMBER .)
    OR              reduce using rule 26 (exp -> NUMBER .)
    $end            reduce using rule 26 (exp -> NUMBER .)
    SIMICOLON       reduce using rule 26 (exp -> NUMBER .)
    ORDER           reduce using rule 26 (exp -> NUMBER .)
    LIMIT           reduce using rule 26 (exp -> NUMBER .)
    RPAREN          reduce using rule 26 (exp -> NUMBER .)


state 50

    (27) NUMBER -> NEGATIVE_INTNUMBER .

    LIKE            reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    EQUAL           reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    NOTEQUAL        reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    BIGGER_EQUAL    reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    BIGGER          reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    SMALLER_EQUAL   reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    SMALLER         reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    COMMA           reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    WHERE           reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    SIMICOLON       reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    RPAREN          reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    AND             reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    OR              reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    $end            reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    ORDER           reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)
    LIMIT           reduce using rule 27 (NUMBER -> NEGATIVE_INTNUMBER .)


state 51

    (28) NUMBER -> POSITIVE_INTNUMBER .

    LIKE            reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    EQUAL           reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    NOTEQUAL        reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    BIGGER_EQUAL    reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    BIGGER          reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    SMALLER_EQUAL   reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    SMALLER         reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    COMMA           reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    WHERE           reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    SIMICOLON       reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    RPAREN          reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    AND             reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    OR              reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    $end            reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    ORDER           reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)
    LIMIT           reduce using rule 28 (NUMBER -> POSITIVE_INTNUMBER .)


state 52

    (29) NUMBER -> FLOATNUMBER .

    LIKE            reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    EQUAL           reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    NOTEQUAL        reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    BIGGER_EQUAL    reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    BIGGER          reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    SMALLER_EQUAL   reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    SMALLER         reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    COMMA           reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    WHERE           reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    SIMICOLON       reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    RPAREN          reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    AND             reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    OR              reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    $end            reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    ORDER           reduce using rule 29 (NUMBER -> FLOATNUMBER .)
    LIMIT           reduce using rule 29 (NUMBER -> FLOATNUMBER .)


state 53

    (6) select -> SELECT distinct select_columns FROM DATASOURCE into . where order limit SIMICOLON
    (16) where -> . WHERE conditions
    (17) where -> . empty
    (5) empty -> .

    WHERE           shift and go to state 34
    ORDER           reduce using rule 5 (empty -> .)
    LIMIT           reduce using rule 5 (empty -> .)
    SIMICOLON       reduce using rule 5 (empty -> .)

    where                          shift and go to state 77
    empty                          shift and go to state 35

state 54

    (38) into -> INTO . DATASOURCE

    DATASOURCE      shift and go to state 78


state 55

    (39) into -> empty .

    WHERE           reduce using rule 39 (into -> empty .)
    ORDER           reduce using rule 39 (into -> empty .)
    LIMIT           reduce using rule 39 (into -> empty .)
    SIMICOLON       reduce using rule 39 (into -> empty .)


state 56

    (7) insert -> INSERT INTO DATASOURCE icolumn VALUES insert_values . SIMICOLON
    (52) insert_values -> insert_values . COMMA insert_values

    SIMICOLON       shift and go to state 79
    COMMA           shift and go to state 80


state 57

    (53) insert_values -> single_values .

    SIMICOLON       reduce using rule 53 (insert_values -> single_values .)
    COMMA           reduce using rule 53 (insert_values -> single_values .)


state 58

    (51) single_values -> LPAREN . values RPAREN
    (49) values -> . values COMMA values
    (50) values -> . value
    (47) value -> . STRING
    (48) value -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    STRING          shift and go to state 63
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    values                         shift and go to state 81
    value                          shift and go to state 82
    NUMBER                         shift and go to state 64

state 59

    (54) icolumn -> LPAREN columns RPAREN .

    VALUES          reduce using rule 54 (icolumn -> LPAREN columns RPAREN .)


state 60

    (8) update -> UPDATE DATASOURCE SET assigns where SIMICOLON .

    $end            reduce using rule 8 (update -> UPDATE DATASOURCE SET assigns where SIMICOLON .)


state 61

    (57) assigns -> assign COMMA assigns .

    WHERE           reduce using rule 57 (assigns -> assign COMMA assigns .)
    SIMICOLON       reduce using rule 57 (assigns -> assign COMMA assigns .)


state 62

    (56) assign -> column EQUAL value .

    COMMA           reduce using rule 56 (assign -> column EQUAL value .)
    WHERE           reduce using rule 56 (assign -> column EQUAL value .)
    SIMICOLON       reduce using rule 56 (assign -> column EQUAL value .)


state 63

    (47) value -> STRING .

    COMMA           reduce using rule 47 (value -> STRING .)
    WHERE           reduce using rule 47 (value -> STRING .)
    SIMICOLON       reduce using rule 47 (value -> STRING .)
    RPAREN          reduce using rule 47 (value -> STRING .)


state 64

    (48) value -> NUMBER .

    COMMA           reduce using rule 48 (value -> NUMBER .)
    WHERE           reduce using rule 48 (value -> NUMBER .)
    SIMICOLON       reduce using rule 48 (value -> NUMBER .)
    RPAREN          reduce using rule 48 (value -> NUMBER .)


state 65

    (19) conditions -> conditions AND . conditions
    (18) conditions -> . LPAREN conditions RPAREN
    (19) conditions -> . conditions AND conditions
    (20) conditions -> . conditions OR conditions
    (21) conditions -> . exp LIKE STRING
    (22) conditions -> . exp logical exp
    (23) conditions -> . NOT conditions
    (24) exp -> . STRING
    (25) exp -> . COLNAME
    (26) exp -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    LPAREN          shift and go to state 44
    NOT             shift and go to state 47
    STRING          shift and go to state 46
    COLNAME         shift and go to state 48
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    conditions                     shift and go to state 83
    exp                            shift and go to state 45
    NUMBER                         shift and go to state 49

state 66

    (20) conditions -> conditions OR . conditions
    (18) conditions -> . LPAREN conditions RPAREN
    (19) conditions -> . conditions AND conditions
    (20) conditions -> . conditions OR conditions
    (21) conditions -> . exp LIKE STRING
    (22) conditions -> . exp logical exp
    (23) conditions -> . NOT conditions
    (24) exp -> . STRING
    (25) exp -> . COLNAME
    (26) exp -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    LPAREN          shift and go to state 44
    NOT             shift and go to state 47
    STRING          shift and go to state 46
    COLNAME         shift and go to state 48
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    conditions                     shift and go to state 84
    exp                            shift and go to state 45
    NUMBER                         shift and go to state 49

state 67

    (18) conditions -> LPAREN conditions . RPAREN
    (19) conditions -> conditions . AND conditions
    (20) conditions -> conditions . OR conditions

    RPAREN          shift and go to state 85
    AND             shift and go to state 65
    OR              shift and go to state 66


state 68

    (21) conditions -> exp LIKE . STRING

    STRING          shift and go to state 86


state 69

    (22) conditions -> exp logical . exp
    (24) exp -> . STRING
    (25) exp -> . COLNAME
    (26) exp -> . NUMBER
    (27) NUMBER -> . NEGATIVE_INTNUMBER
    (28) NUMBER -> . POSITIVE_INTNUMBER
    (29) NUMBER -> . FLOATNUMBER

    STRING          shift and go to state 46
    COLNAME         shift and go to state 48
    NEGATIVE_INTNUMBER shift and go to state 50
    POSITIVE_INTNUMBER shift and go to state 51
    FLOATNUMBER     shift and go to state 52

    exp                            shift and go to state 87
    NUMBER                         shift and go to state 49

state 70

    (10) logical -> EQUAL .

    STRING          reduce using rule 10 (logical -> EQUAL .)
    COLNAME         reduce using rule 10 (logical -> EQUAL .)
    NEGATIVE_INTNUMBER reduce using rule 10 (logical -> EQUAL .)
    POSITIVE_INTNUMBER reduce using rule 10 (logical -> EQUAL .)
    FLOATNUMBER     reduce using rule 10 (logical -> EQUAL .)


state 71

    (11) logical -> NOTEQUAL .

    STRING          reduce using rule 11 (logical -> NOTEQUAL .)
    COLNAME         reduce using rule 11 (logical -> NOTEQUAL .)
    NEGATIVE_INTNUMBER reduce using rule 11 (logical -> NOTEQUAL .)
    POSITIVE_INTNUMBER reduce using rule 11 (logical -> NOTEQUAL .)
    FLOATNUMBER     reduce using rule 11 (logical -> NOTEQUAL .)


state 72
